GNOME Bugzilla – Bug 751448
Bookmarks sometimes disappear when dragging them away
Last modified: 2015-07-08 03:17:38 UTC
Created attachment 306023 [details] Screencast showing the problem So, sometimes when I drag a bookmark out of the sidebar in a filechooser and the drag fails (needed?), the bookmark simply disappears from the sidebar. Screencast attached.
Carlos, can you have a look ?
Did you do something previously? Like adding a new bookmark, or dragging from the file chooser to show the new bookmark or something? Can't reproduce here for now (and not obvious error on the code).
No, it's an ordinary bookmark (I created before the GtkPlacesSidebar rewrite).
My recipe for reproducing this: 1) drag a bookmark down over empty space in the sidebar 2) let it go 3) move the pointer out of the sidebar before the snap-back animation is done 4) the bookmark goes missing!
This seems to fix it for me. Not sure why that line was there - Carlos ? diff --git a/gtk/gtkplacessidebar.c b/gtk/gtkplacessidebar.c index a591ea5..322b7f1 100644 --- a/gtk/gtkplacessidebar.c +++ b/gtk/gtkplacessidebar.c @@ -1456,11 +1456,7 @@ on_motion_notify_event (GtkWidget *widget, return FALSE; if (!(event->state & GDK_BUTTON1_MASK)) - { - sidebar->drag_row = NULL; - - return FALSE; - } + return FALSE; if (gtk_drag_check_threshold (widget, sidebar->drag_root_x, sidebar->drag_root_y,
(In reply to Matthias Clasen from comment #5) > This seems to fix it for me. Not sure why that line was there - Carlos ? > > diff --git a/gtk/gtkplacessidebar.c b/gtk/gtkplacessidebar.c > index a591ea5..322b7f1 100644 > --- a/gtk/gtkplacessidebar.c > +++ b/gtk/gtkplacessidebar.c > @@ -1456,11 +1456,7 @@ on_motion_notify_event (GtkWidget *widget, > return FALSE; > > if (!(event->state & GDK_BUTTON1_MASK)) > - { > - sidebar->drag_row = NULL; > - > - return FALSE; > - } > + return FALSE; > > if (gtk_drag_check_threshold (widget, > sidebar->drag_root_x, sidebar->drag_root_y, Whops, a behavioural copy paste error. Please go ahead.